# SnowOS

./: .gitignore  .gitmodules  LICENSE  README.md  meson.build
common/: get-deps
subprojects/: uacpi.patch
yuki/: limine.conf  meson.build
yuki/include/: typedefs.hpp
yuki/include/hal/: hal.hpp  paging.hpp  serial.hpp
yuki/include/hal/amd64/: cpuid.hpp  paging.hpp
yuki/include/hal/x64/: paging.hpp
yuki/include/ke/: log.hpp  print.hpp  spinlock.hpp  string.hpp
yuki/include/mm/: early_alloc.hpp  freelist.hpp  mm.hpp  pfndb.hpp  pmm.hpp  vmem.hpp
yuki/include/utils/: list.hpp
yuki/source/hal/: gdt.asm  hal.cpp  isr.asm  paging.cpp  serial.cpp
yuki/source/hal/amd64/: cpuid.cpp  paging.cpp
yuki/source/hal/x64/: paging.cpp
yuki/source/ke/: interrupts.cpp  kernel.cpp  kernel_api.cpp  log.cpp  print.cpp  string.cpp
yuki/source/mm/: early_alloc.cpp  freelist.cpp  mminit.cpp  physical.cpp  pmm.cpp  vm_init.cpp  vmem.cpp
